# minargs

./: Cargo.toml  readme.md  rustfmt.toml
examples/: basic.rs
examples/comparation/: Cargo.toml  readme.md
examples/comparation/clap_demo/: Cargo.toml
examples/comparation/clap_demo/src/: main.rs
examples/comparation/minargs_demo/: Cargo.toml
examples/comparation/minargs_demo/src/: main.rs
examples/trait/: Cargo.toml
examples/trait/src/: config.rs  main.rs
src/: app.rs  arg.rs  lib.rs  matches.rs
